--- a/index.html
+++ b/index.html
@@ -1,193 +1,126 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="style.css" />
+  <meta charset="UTF-8" />
+  <title>Omni-Man - The Viltrumite Legacy</title>
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- jQuery + ScrollTo -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
 </head>
 <body>
-<div id="menu">
-<li><a href="#about">About Me</a></li>
-<li><a href="#photos">My Photos</a></li>
-<li><a href="#playlist">My Playlist</a></li>
-<li><a href="#like">Like</a></li>
-<li><a href="#qrcoder">QR code</a></li>
-<li><a href="#spa">Q&A</a></li>
-<li><a href="#contact">Contact Me</a></li>
-</div>
-		  
-<section id="about" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-about me
-<br/>
-<br/>
-<br/>
-</section>
 
-<section id="photos" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my photos
-<br/>
-<br/>
-<br/>
-</section>
+  <div id="menu">
+    <ul>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#photos">My Photos</a></li>
+      <li><a href="#playlist">My Playlist</a></li>
+      <li><a href="#like">Like</a></li>
+      <li><a href="#qrcode">QR Code</a></li>
+      <li><a href="#qa">Q&A</a></li>
+      <li><a href="#contact">Contact Me</a></li>
+    </ul>
+  </div>
 
-<section id="playlist" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my playlist
-<br/>
-<br/>
-<br/>
-</section>
-
-<section id="like" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-give me a like
-<br/>
-<br/>
-<br/>
-</section>
-
-<section id="qrcoder" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-scan my code
-<br/>
-<br/>
-<br/>
-</section>
-
-<section id="spa" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-ans
-<br/>
-<br/>
-<br/>
-</section>
-
-<section id="contact" class="section">
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-contact me
-<br/>
-<br/>
-<br/>
-</section>
+  <section id="about" class="section">
+    <h2>About Me</h2>
+    <p>I am Omni-Man, a proud Viltrumite warrior. I came to Earth with a mission: to prepare your planet for our empire. I lived among you, raised a family, and taught my son the truth — eventually.</p>
+  </section>
 
 
-<script type="text/javascript">
-$(function(){
-  $("#nav a").click(function(e){
-    e.preventDefault();
-    $('html,body').scrollTo(this.hash,this.hash); 
-  });
-});
-</script>
-<script type="text/javascript">
- $(document).scroll(function() {
-    $('#menu').toggle($(this).scrollTop()>1000)
- });​
- </script>
+  <section id="photos" class="section">
+    <h2>My Photos</h2>
+    <br>
+    <img src="properties/OMNICHEEKS.jpg" alt="Omni-Man" />
+  </section>
+
+  <section id="playlist" class="section">
+    <h2>My Playlist</h2>
+    <br>
+    <iframe width="500" height=" 100"
+    src="properties/Snail's House - Hot Milk.mp3"
+    frameborder="0"
+    allow="autoplay">
+    </iframe>
+  </section>
+
+  <section id="like" class="section">
+    <h2>Give Me a Like</h2>
+    <button id="likeBtn">👍 Like <span id="likeCount">0</span></button>
+  </section>
+
+  <section id="qrcode" class="section">
+    <h2>Scan the QR Code</h2>
+    <br>
+    <img src="properties/qr.jpeg" alt="QR Code to site" width="200">
+  </section>
+
+  <section id="qa" class="section">
+    <h2>Q&A – Web1 / Web2 / Web3</h2>
+    <ol>
+      <li><strong>Web1:</strong> Static websites, read-only.</li>
+      <li><strong>Web2:</strong> Social interaction, users share content.</li>
+      <li><strong>Web3:</strong> Decentralized, user-owned data, blockchain-powered.</li>
+    </ol>
+    <p><strong>Example:</strong> Searching “side effects of medication”</p>
+    <ul>
+      <li>Web1: You get a plain article.</li>
+      <li>Web2: You get reviews, comments, and YouTube videos.</li>
+      <li>Web3: You get verified personal data, anonymous, decentralized access.</li>
+    </ul>
+  </section>
+
+  <section id="contact" class="section">
+    <h2>Contact Me</h2>
+    <br>
+    <p>I might be off the planet but for you I would do everything, my sweet pookie❤️</p>
+
+    <form action="mailto:omni@viltrumite.gov" method="post" enctype="text/plain">
+      <!--harelbr@post.bgu.ac.il-->
+
+      <label>Your Email:</label><br>
+      <input type="email" name="email" required><br><br>
+
+      <label>Your Message:</label><br>
+      <textarea name="message" rows="4" required></textarea><br><br>
+
+      <label>Pick a Mood:</label><br>
+      <select name="mood">
+        <option value="🔥">🔥</option>
+        <option value="😐">😐</option>
+        <option value="👊">👊</option>
+      </select><br><br>
+
+      <button type="submit">Send</button>
+    </form>
+  </section>
+
+  <!-- Smooth Scroll Script -->
+  <script>
+    $(function(){
+      $("#menu a").click(function(e){
+        e.preventDefault();
+        $.scrollTo(this.hash, 800);
+      });
+    });
+  </script>
+
+  <!-- Like Button Script -->
+  <script>
+    const btn = document.getElementById('likeBtn');
+    const counter = document.getElementById('likeCount');
+
+    // Load saved count from localStorage
+    let likeCount = localStorage.getItem('likeCount') || 0;
+    counter.textContent = likeCount;
+
+    btn.addEventListener('click', () => {
+      likeCount++;
+      counter.textContent = likeCount;
+      localStorage.setItem('likeCount', likeCount);
+    });
+  </script>
+
 </body>
 </html>
