--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
   <section id="playlist" class="section">
     <h2>My Playlist</h2>
     <br>
-    <iframe width="500" height=" 100"
-    src="properties/Snail's House - Hot Milk.mp3"
-    frameborder="0"
-    allow="autoplay">
-    </iframe>
+    <audio controls>
+      <source src="properties/Snail's House - Hot Milk.mp3" type="audio/mpeg">
+    </audio>
   </section>
 
   <section id="like" class="section">
