--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
   <meta charset="UTF-8" />
   <title>Omni-Man - The Viltrumite Legacy</title>
   <link rel="stylesheet" href="style.css" />
-
-  <!-- jQuery + ScrollTo -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
 </head>
 <body>
 
@@ -25,18 +21,37 @@
 
   <section id="about" class="section">
     <h2>About Me</h2>
-    <p>I am Omni-Man, a proud Viltrumite warrior. I came to Earth with a mission: to prepare your planet for our empire. I lived among you, raised a family, and taught my son the truth — eventually.</p>
+    <p>Hello everyone🥰</p>
+    <p>My name is Nolan Grayson, but you can call me Omni-man😎</p>
+    <p>I am a Viltrumite, a member of the Viltrumite Empire, and I am here to conquer Earth.</p>
+    <p>Couple facts about me:</p>
+    <ul>
+      <li>🧓 Age: Over 2,000 years old (Viltrumite lifespan)</li>
+      <li>👨‍👩‍👦 Family status: Married to Debbie Grayson, father to Mark Grayson (a.k.a. Invincible)</li>
+      <li>🚀 Hobbies: Flying at Mach speed, ✍️ writing travel books, 😐 blending in as a human... 💥 eliminating threats to the Viltrumite Empire</li>
+      <li>Favorite drink: wine🍷</li>
+    </ul>
   </section>
 
 
   <section id="photos" class="section">
     <h2>My Photos</h2>
     <br>
-    <img src="properties/OMNICHEEKS.jpg" alt="Omni-Man" />
+    <img src="properties/Omni-Man1.jpg" width="300" height="200" alt="Omni-Man" />
+    <img src="properties/Omni-Man2.jpg" width="300" height="200" alt="Omni-Man" />
+    <img src="properties/Omni-Man3.jpg" width="300" height="200" alt="Omni-Man" />
+    <img src="properties/Omni-Man4.jpg" width="300" height="200" alt="Omni-Man" />
+    <img src="properties/Omni-Man5.jpg" width="300" height="200" alt="Omni-Man" />
+
+    <br><br><br>
+    <a href="photos.html" class="photo-link">DO NOT CLICK</a>
+    
   </section>
 
   <section id="playlist" class="section">
     <h2>My Playlist</h2>
+    <br>
+    <p>Snail's House - Hot Milk</p>
     <br>
     <audio controls>
       <source src="properties/Snail's House - Hot Milk.mp3" type="audio/mpeg">
