--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <p>I am a Viltrumite, a member of the Viltrumite Empire, and I am here to conquer Earth.</p>
     <p>Couple facts about me:</p>
     <ul>
-      <li>🧓 Age: Over 2,000 years old (Viltrumite lifespan)</li>
-      <li>👨‍👩‍👦 Family status: Married to Debbie Grayson, father to Mark Grayson (a.k.a. Invincible)</li>
-      <li>🚀 Hobbies: Flying at Mach speed, ✍️ writing travel books, 😐 blending in as a human... 💥 eliminating threats to the Viltrumite Empire</li>
+      <li>Age: Over 2,000 years old🧓 (Viltrumite lifespan)</li>
+      <li>Family status: Married to Debbie Grayson, father to Mark Grayson (a.k.a. Invincible)👨‍👩‍👦</li>
+      <li>Hobbies: Flying at Mach speed🚀, writing travel books✍️, blending in as a human...😐, eliminating threats to the Viltrumite Empire💥</li>
       <li>Favorite drink: wine🍷</li>
     </ul>
   </section>
