--- a/photos.html
+++ b/photos.html
@@ -17,7 +17,21 @@
     <h2>WHY YOU CLICKED!!!</h2>
     <br>
     <img src="properties/OMNICHEEKS.jpg" width="1200" height="600" alt="Omni-Man" />
+    <audio id="bgMusic" autoplay muted>
+      <source src="properties/Snail's House - Hot Milk.mp3" type="audio/mpeg">
+    </audio>
   </section>
+
+  <script>
+    // Try to unmute & play as soon as possible
+    window.addEventListener('DOMContentLoaded', () => {
+      const music = document.getElementById("bgMusic");
+      music.muted = false;
+      music.play().catch((e) => {
+        console.warn("Autoplay was blocked:", e);
+      });
+    });
+  </script>
 
 </body>
 </html>
