--- a/photos.html
+++ b/photos.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Omni-Man Photo Gallery</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
