--- a/photos.html
+++ b/photos.html
@@ -13,6 +13,8 @@
 
   <div class="video-container">
     <iframe 
+      width="1560"
+      height="1560" 
       src="https://www.youtube.com/embed/EZZh4PAthZs?autoplay=1&controls=0&modestbranding=1&showinfo=0&rel=0&enablejsapi=1" 
       title="YouTube video player"
       allow="autoplay; fullscreen"
