hope this works

--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
     src="https://www.youtube.com/embed/N8nGig78lNs?si=r5ZXeW4nbRdJhfuE" 
     title="YouTube video player" 
     frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-    </iframe>
+    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" 
+    ></iframe>
+  </iframe>
   </section>
 
   <section id="like" class="section">
