changed plain text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p>Couple facts about me:</p>
     <ul>
       <li>Age: Over 2,000 years old🧓 (Viltrumite lifespan)</li>
-      <li>Family status: Married to Debbie Grayson, father to Mark Grayson (a.k.a. Invincible)👨‍👩‍👦</li>
+      <li>Family status: Married to Debbie Grayson, father to Oliver and Mark Grayson (a.k.a. Invincible)👨‍👩‍👦</li>
       <li>Hobbies: Flying at Mach speed🚀, writing travel books✍️, blending in as a human...😐, eliminating threats to the Viltrumite Empire💥</li>
       <li>Favorite drink: wine🍷</li>
     </ul>
@@ -98,8 +98,8 @@
     <p><strong>Example:</strong> Searching “side effects of medication”</p>
     <ul>
       <li>Web1: You get a plain article.</li>
-      <li>Web2: You get reviews, comments, and YouTube videos.</li>
-      <li>Web3: You get verified personal data, anonymous, decentralized access.</li>
+      <li>Web2: You also get reviews, comments, and YouTube videos.</li>
+      <li>Web3: You also get verified personal data, anonymous, decentralized access.</li>
     </ul>
   </section>
 
